adding recycle_types table, to use with collection points. This is extra only to have and relacion N:N
